...
            onTap: onAccount,
          ),
        ],
        if (onSettings != null) ...[
          const SizedBox(width: 4),
          _RoundButton(
            buttonKey: const Key('notifications_button'),
            icon: Icons.settings,
            tooltip: settingsTooltip,
            onTap: onSettings,
          ),
        ],
      ];
...
